assets/css/main.css
/* ===[ Global styling ]=== */

body {
  background-color: var(--secondary);
  color: #330000;
  font-family: var(--default-font), sans-serif;
}

h1 { font-family: var(--title-font), serif; }

h2, h3, h4, #toctitle { font-family: var(--header-font), serif; }

h1 {
  color: var(--primary);
  padding-bottom: 3rem;
  padding-top: 7rem;
}

h2, h4, #toctitle { color: var(--accent-color); }

@media screen and (min-width: 601px) {
  h1 { font-size: 5em; }
  h2 { font-size: 40pt; }
  h3, #toctitle { font-size: 28pt; }
  h4 { font-size: 22pt;}
}

@media screen and (max-width: 600px) {
  h1 { font-size: 16vw; }
  h2 { font-size: 10vw; }
  h3, #toctitle { font-size: 8vw; }
  h4 { font-size: 5vw; }
}


/* ===[ Site navigation styling ]=== */

.navbar {
  --bs-navbar-color: var(--secondary);
  --bs-navbar-hover-color: var(--secondary);
  --bs-navbar-active-color: var(--secondary);
  background-color: var(--primary);
  position: fixed;
  z-index: 100;
}

.dropdown-menu { background-color: var(--accent-color); }

.navbar li a {
  background-color: var(--primary);
  border-color: var(--accent-color);
  border-style: solid;
  color: var(--secondary);
  text-align: center;
}

.navbar li a:hover {
  background-color: royalblue;
  text-decoration: underline;
  text-decoration-color: skyblue;
  text-decoration-style: dotted;
}


/* ===[ Main body styling ]=== */

/* Darken main links further to guarantee 4.5:1 contrast */
main a {
  color: #003366;
  text-decoration: underline;
}

main a:hover {
  color: #003d82;
}

main #projects-carousel .pc-fixed-height { height: 10vh; }

main #projects h3 {
  background-color: var(--primary);
  color: var(--secondary);
}

main #toc {
  background-color: #f8f9fa;
  border: 1px solid #a2a9b1;
  display: inline-grid;
  padding: 0.75rem;
  margin-bottom: 3rem;
}

main #toctitle {
  text-align: center;
}

main .rounded-profile img {
  border-radius: 50%;
  display: block;
  margin-bottom: 3rem; margin-left: auto; margin-right: auto;
  height: auto;
}

@media screen and (min-width: 601px) {
  main .rounded-profile img { max-width: 250px; }
}

@media screen and (max-width: 600px) {
  main .rounded-profile img { max-width: 140px; }
}


/* ===[ Footer styling ]=== */

footer { overflow: hidden; }

footer .imageblock {
  display: inline-block;
  padding: 0.5rem;
}

footer #footer-box {
  background-color: var(--primary);
  color: var(--secondary);
  font-size: 0.8rem;
}

footer #footer-box a {
  color: var(--secondary);
  text-decoration-style: dotted;
}

footer #footer-box a:hover {
  color: skyblue;
  text-decoration-style: dashed;
}

